[package]
name = "nal-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_distr = "0.4.3"
rand = { version = "0.8.5", features = ["small_rng"] } 
nalgebra = "0.32.4"
num-traits = "0.2.18"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "cor2"
path = "benches/cor2.rs"
harness = false

[[bench]]
name = "round"
path = "benches/round.rs"
harness = false

[[bench]]
name = "randn"
path = "benches/randn.rs"
harness = false

[lib]
doctest = true
